# neena

./: .gitignore  README.md  requirements_20240326.txt
backend/: .flake8  .gitignore  local.py  local_slack.py  pyproject.toml  requirements.txt  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 19a3279afd31_align_sql_models_with_pydantic_task_prep.py  1e61ada14a13_neenav2_models_edits.py  204ffefa2c93_make_adjustments_to_to_model_for_syncing.py  32cad5473878_change_nullability_of_flow_request_.py  4d129cc23ac3_use_auth0_user_model_combined_with_self_.py  749cc48d9e12_neenav2_models.py  7a7571858d19_fix_typo_in_integration_for_.py  7f9e3611ddb9_adjust_taskdefinition_for_input_fields.py  889ebefe4b1c_add_datetime_and_ownership_columns_to_.py  97f6680166b8_add_run_models.py  9c4682059501_add_request_name_to_flow_request.py  ac43363c9fdd_add_nullability_for_created_by_and_.py  c3af63c7368c_make_adjustments_to_models_for_.py  c5f6cb8b3ad0_add_ncis_on_task_logs.py  cb5891a5b371_fix_references_between_task_op_.py  d4f5ef611a16_drop_flow_request_body.py  d6f77351f497_make_task_op_coordinates_optional.py  dd69139d321a_adjust_taskdefinition_for_input_fields_2.py  e45eb1e8c65c_make_adjustments_to_task_run_models.py  f6a540e563d6_adjust_taskdefinition_for_input_fields_3.py
backend/app/: main.py
backend/app/core/: __init__.py  auth.py  config.py  flow_generator.py  keyvault.py  logging.py  openai_service.py  secrets.py  shared_models.py  task_definition_retriever.py  task_preparation_generator.py
backend/app/crud/: __init__.py  base.py  crud_dependency.py  (+13 more)
(+300 files in other folders)
